@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{bellows}
-  s.version = "1.0.2"
+  s.version = "1.0.3"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Dan Prince"]
-  s.date = %q{2011-10-27}
+  s.date = %q{2011-11-01}
   s.default_executable = %q{bellows}
   s.description = %q{CLI to drive SmokeStack test creation and maintenance based on Gerrit reviews.}
   s.email = %q{dan.prince@rackspace.com}
