@@ -2,9 +2,10 @@
 
 require "rubygems"
 require "thor"
-#if not $release
-  #$:.unshift File.dirname(__FILE__) + "/../lib"
-#end
+
+# uncomment this for local testing
+# $:.unshift File.dirname(__FILE__) + "/../lib"
+
 require "bellows"
 
 Bellows::Tasks.start
